Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-01 (SVN):
    * engine/hexenworld/shared/net_chan.c (Netchan_Setup): pre-initialize
      chan->incoming_sequence to -1 so a packet with an incoming sequence
      of 0 will work. Patch found in old quakeforge cvs commits.
      (Netchan_Process): Adjusted sequence comparison accordingly. Also
      cast chan->incoming_sequence to unsigned to match the type of the
      sequence varible.

2011-11-29 (SVN):
    * Added Watt-32 (WatTCP) support for the DOS port: Tested and reported
      to work by Frank Sapone. Added the option to build hwcl and hwsv for
      DOS too, but it has connection problems at the moment.

2011-11-28 (SVN):
    * hexenworld, cl_main.c: Moved the registration of cvar sys_nostdout
      from CL_Init() to an early stage in Host_Init().

2011-11-27 (SVN):
    * cd_dos.c (CDAudio_Init): Removed check for ca_dedicated: We never
      call CDAudio_Init() if we are running as a dedicated server.
    * hexen2, server/sys_dos.c (Sys_ConsoleInput): Removed the pointless
      isDedicated check.

2011-11-27 (SVN):
    * dos port: Made the MPATH winsock driver a compile time option.

2011-11-27 (SVN):
    * hexen2, net_udp.c: Replaced explicit ioctl calls by ioctlsocket.
      Replaced explicit strerror(errno) by a socketerror(SOCKETERRNO).

2011-11-27 (SVN):
    * dos port: mpdosock.h, mplpc.c, net_mp.c: Prefixed all of the public
      functions by WSLIB_ which would help me with using WatTCP later on.

2011-11-27 (SVN):
    * Bumped version to 1.5.2 in the development tree.

2011-11-21 (SVN):
    * Provided cd-rip scripts for less common game media, i.e. the Xplosiv
      re-release and the Matrox m3D oem versions of Hexen II.  Reformatted
      README.music file and added m3d tracks information.  Updated the rpm
      spec file.

2011-11-21 (SVN):
    * vid_sdl.c (VID_PrepareModes): Sort the list of modes using a copy